2011-08-22  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Related Records: Set the row height.

	* glom/print_layout/canvas_layout_item.cc: We can do this now that the 
	goocanvas bug has been fixed, though configure should check for it when the
	tarball version exists.

2011-08-22  Murray Cumming  <murrayc@murrayc.com>

	Print Layout / Relationships Overview: Avoid errors with & in the text.

	* glom/utility_widgets/canvas/canvas_text_movable.cc: reconstruct_markup:
  Escape the text before using it to build markup. Otherwise pango will complain
  (correctly) about & in the text.

2011-08-15  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Do not show navigation options for related records portals.

	* glom/mode_design/layout/dialog_layout_list_related.[h|cc]:
  set_document(): Add a new bool parametrer that can hide the navigation 
  widgets because they are useless in a print layout.
	* glom/print_layout/canvas_print_layout.cc: offer_related_records():
  Use the new bool parameter.
	* ui/developer/window_data_layout.glade: Correct some packing options so 
  the right parts expand, without empty space.

2011-08-13  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Snap to rules even when the grid is not shown.

	* glom/utility_widgets/canvas/canvas_group_grid.cc: Don't make snapping 
	to rules dependent on whether the grid is showing.

2011-08-12  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Work around some weirdness in portal tables.

	* glom/print_layout/canvas_layout_item.cc:
	create_canvas_item_for_layout_item() Do not set the height of 
	items in tables, because that leads to them disappearing when the 
	table is moved in certain ways. I am still investigating why.
	We probably really do want to set the height.

2011-08-11  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Only show grid lines on mouseover.

	* glom/utility_widgets/canvas/canvas_table_movable.[h|cc]:
	Add set_lines_visibility().